force-app/main/default/objects/cgcloud__CP_Key_Attribute__c/cgcloud__CP_Key_Attribute__c.object-meta.xml
<CustomObject>
    <description>The key attribute object is used for complex pricing condition determination.</description>
    <label>Key Attribute</label>
    <nameField>
        <label>Key Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>