force-app/main/default/objects/cgcloud__CP_Key_Attribute__c/fields/cgcloud__Mobility_Attribute__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_Attribute__c</fullName>
    <description>Textual specification of attribute name taken from the mobility data source used for data determination</description>
    <label>Field Alias</label>
    <length>40</length>
    <type>Text</type>
</CustomField>