force-app/main/default/objects/cgcloud__CP_Key_Attribute__c/fields/cgcloud__Mobility_Entity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_Entity__c</fullName>
    <description>Textual specification of the mobility data source that is used for data determination.</description>
    <inlineHelpText>Allowed combination with Object: Customer =&gt; Customer; Product =&gt; Product; Order =&gt; Order OR Order Item; Auxiliary =&gt; Main OR Item</inlineHelpText>
    <label>Source Object</label>
    <length>30</length>
    <type>Text</type>
</CustomField>