force-app/main/default/objects/cgcloud__CP_Key_Attribute__c/fields/cgcloud__Object__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Object__c</fullName>
    <description>Specification of the object (module) the key attribute mapping belongs to.</description>
    <label>Context Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>